--- a/css/navBar.css
+++ b/css/navBar.css
@@ -2,52 +2,11 @@
  * @Author: Kevin.Chen 
  * @Date: 2017-07-15 19:58:46 
  * @Last Modified by: Kevin.Chen
- * @Last Modified time: 2017-07-15 19:59:41
+ * @Last Modified time: 2017-07-23 10:10:34
  */
 body {
     margin: 0;
 }
-
-
-/*old method of nav bar*/
-
-
-/*ul {
-    list-style-type: none;
-    margin: 10;
-    padding: 0;
-    overflow: hidden;
-
-    /*fix head to top*/
-
-
-/* position: fixed;
-    top: 0;
-    width: 100%;
-}*/
-
-
-/*
-li {
-    float: left;
-}*/
-
-
-/*li a {
-    color: black;
-    text-align: center;
-    padding: 10px 10px;
-    margin: 50px;
-    text-decoration: none;
-}*/
-
-
-/* Change the link color to #111 (black) on hover */
-
-
-/*li a:hover {
-    color: pink;
-}*/
 
 #Title {
     /*display: inline-block;*/
@@ -108,33 +67,75 @@ div.tab button:hover {
 
 
 /*move bottom underline*/
-/*
+
 .one:hover ~ #Line-Bar {
-    margin-left: 0% !important;
+    margin-left: 5% !important;
 }
 
 .two:hover ~ #Line-Bar {
-    margin-left: 20% !important;
+    margin-left: 25% !important;
 }
 
 
 .three:hover ~ #Line-Bar  {
-    margin-left: 40% !important;
+    margin-left: 45% !important;
 }
 
 .four:hover ~ #Line-Bar  {
-    margin-left: 60% !important;
-}*/
+    margin-left: 65% !important;
+}
 
 #Line-Bar {
     display: block;
     height: .25rem;
-    width: 20%;
+    width: 10%;
     background: pink;
     border: none;
     transition: .3s ease-in-out;
     /*margin needs to be same as div.tab button*/
-    margin: 0px 1px 0px 0px;
-    /*margin-left: 0%;*/
-    float: left;
+    margin: 0px 100px 0px 0px;
+    margin-left: 5%;
+    float: left; 
 }
+
+
+
+/*old method of nav bar*/
+
+
+/*ul {
+    list-style-type: none;
+    margin: 10;
+    padding: 0;
+    overflow: hidden;
+
+    /*fix head to top*/
+
+
+/* position: fixed;
+    top: 0;
+    width: 100%;
+}*/
+
+
+/*
+li {
+    float: left;
+}*/
+
+
+/*li a {
+    color: black;
+    text-align: center;
+    padding: 10px 10px;
+    margin: 50px;
+    text-decoration: none;
+}*/
+
+
+/* Change the link color to #111 (black) on hover */
+
+
+/*li a:hover {
+    color: pink;
+}*/
